--- a/panel.html
+++ b/panel.html
@@ -15,11 +15,36 @@
     <title>Skrotbud.dk</title>
     <link rel="stylesheet" href="Style.css">
     <link rel="stylesheet" href="form.css">
+    <link rel="stylesheet" href="Panel.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="functions.js"></script>
 </head>
 <body>
-    
+    <section id="header2">
+        <a href="#bgimgg"> <img src="img/Logo/skrotbud.svg" class="logo" alt=""></a>
+        <div>
+            <ul id="navbar">
+                <li><a class="hfd" href="#submitbutton">Statistik</a></li>
+                <li><a class="bft" href="#udfyld2">Dashboard</a></li>
+                <li><a class="qa" href="#submitbutton5">Spørgsmål </a></li>
+                <li><a class="cnt" href="Kontakt.htmlS">Kontakt</a></li>
+            </ul>
+        </div>
+        </section>
+
+
+
+<section class="panelsection">
+    <div class="paneldiv">
+        <ul class="panel">
+            <li>Navn:</li>
+            <li>Nummerplade:</li>
+            <li>Mail:</li>
+            <li>Postnummer:</li>
+
+        </ul>
+    </div>
+</section>
 
 
 </body>
